--- a/activities/UMD_Fees.Rmd
+++ b/activities/UMD_Fees.Rmd
@@ -27,11 +27,31 @@ umd_fees <- read_csv("https://raw.githubusercontent.com/dwillis/jour405/refs/hea
 umd_fees_pct <- umd_fees |> mutate(pct_change = (`Fall 2024`- `Fall 2021`)/`Fall 2021` * 100)
 ```
 
-
+```{r}
+umd_fees_pct <- umd_fees |> mutate(pct_change = (`Fall 2025`- `Fall 2024`)/`Fall 2024` * 100)
+```
 
 ### Task 4: Describe our results
 
 Write a few sentences about what you found in the data. What's the story here?
+2021-2025:
+The biggest increases in spending were in Student Sustainability with 150% increase and the Shuttle Bus in 39%. Other increases were in Student Union, Student Activities, and Recreation Services with spending increasing across all three by 11-14%. Athletics spending stayed th same. There was the introduction of the Student Counselling Center. 
+
+2024-2025: 
+Biggest spending was a 14% increase in Student Activities. Second was the Shuttle Bus with 9% increase.Student Counselling, Center Recreation Services, Student Union all increased by 3-4.2%. Athletics and Student Sustainability did not change. Total spending went up by 4.5%.
+
+```{r}
+comp <- read_csv("https://raw.githubusercontent.com/dwillis/jour405/refs/heads/main/data/class_composition.csv")
+
+comp |>
+  summarize(
+    mean_first = mean(first_year),
+    mean_soph = mean(sophomore),
+    mean_junior = mean(junior),
+    mean_senior = mean(senior),
+    mean_grad = mean(grad)
+  )
+```
 
 
 
