--- a/homework/HW3_WH_Salaries.Rmd
+++ b/homework/HW3_WH_Salaries.Rmd
@@ -9,6 +9,7 @@ In this assignment, we will be working with a dataset containing information abo
 You will need to load the tidyverse library
 
 ```{r}
+library(tidyverse)
 ```
 
 Then you'll load the data from the web. The URL for the data is: https://raw.githubusercontent.com/dwillis/jour405/refs/heads/main/data/white_house_salaries_2025.csv. You will create a dataframe called `wh_salaries` that contains the data from this URL.
@@ -16,19 +17,21 @@ Then you'll load the data from the web. The URL for the data is: https://raw.git
 ### Task 2: Load the Data and Describe It
 
 ```{r}
+wh_salaries <- read_csv("https://raw.githubusercontent.com/dwillis/jour405/refs/heads/main/data/white_house_salaries_2025.csv")
 ```
 ### Task 3: Describe the Data
 
 You should examine that dataframe carefully by clicking on it in the Environment tab in RStudio. Write a couple of sentences describing the categories of incidents. From a reporting standpoint, what stands out to you about this data? Are there any salary values that will cause problems for analysis?
 
-ANSWER HERE
+The dataset contains White House staff information, including name, employment type- employee or detailee, annual salary, pay basis and position title. Salaries reflect standardized pay levels- 65,000, 121,500, 195,200- however several entries list a salary of 0, which could represent missing data or unpaid work. This could be problematic as it could distort the averages statistics if not handled properly. From a reporting standpoint, the wide salary range and use of pay tiers stands out as they highlight a hierarchy of position. But does it equal quality of work or relationship with the president?
 
 ### Task 4: Calculate the Mean and Median of the Salaries
 
 Write code to calculate the mean and median of the salaries in the dataset using the `summarize()` function. You don't need to make a new dataframe, just display the results.
 
 ```{r}
-
+wh_salaries |> summarise(mean_salary = mean(SALARY),
+              median_salary = median(SALARY))
 ```
 
 ### Task 5: Add in the minimum and maximum salaries
@@ -36,17 +39,20 @@ Write code to calculate the mean and median of the salaries in the dataset using
 Take the code you just wrote and add in the minimum and maximum salaries (the functions for that are `min()` and `max()`). Your results should show four columns: mean_salary, median_salary, min_salary, max_salary.
 
 ```{r}
-
+wh_salaries |> summarise(mean_salary = mean(SALARY),
+              median_salary = median(SALARY),
+              min_salary = min(SALARY),
+              max_salary = max(SALARY))
 ```
 
 ### Task 6: Describe the Results
 
 Write a couple of sentences describing the results of your analysis. What do the mean and median salaries tell you about the data? What do the minimum and maximum salaries tell you? Are there any outliers in the data?
 
-ANSWER HERE
+The mean salary is 109,117 while the median salary is 101,500 which means the distribution is slightly skewed to the right. This means higher salaries are pulling the average up above the median. The min salary is 0, indicating there are unpaid/missing value entries that could affect analysis, while the max is 225,700 showing wide salary range. The 0 values and highest salaries act as outliers and contribute to the skewness of the data.
 
 ### Task 7: Story Idea
 
-Based on the data, what is your best story idea? What is the next step you would take to develop that story idea?
+The main focus of my story would be on the mysterious $0 salaries, as it raises questions about unpaid roles and special appointments. I would also report on the structure of WH pay, writing about clear salary tiers and deep-diving into how pay differs by job title and employment type- employee or detailee. 
+My next steps would be to  investigate the individuals with $0 salaries to determine whether there is something suspicious occurring, i.e.: under the table deals.
 
-ANSWER HERE
