--- a/activities/VBPercentiles.Rmd
+++ b/activities/VBPercentiles.Rmd
@@ -37,7 +37,7 @@ team_aces |> mutate(percentile = ntile(total_aces, 100))
 
 Write a couple of sentences that puts Maryland into context with the other teams in the dataset. You can do some Internet research to help with this.
 
-
+Looking at total team aces, Maryland ranks 17th with 223 aces, UTEP leads with 263 aces. Maryland is in the 95th percentile, meaning 95% of teams scored the same or lower amount of aces than Maryland did in the season.UTEP, as the top team sets the standard being the 100th percentile. In the 2024 season, the Maryland Volleyball record was 14-17, objectively a disappointing result. So the fact they ranked so high in the table for the amount of aces suggests that aces don't really matter all that much when it comes to linking playing stats to wins.
 
 When you are done, save your work, switch to GitHub Desktop, then add, commit and push your changes to GitHub and submit the URL of the notebook in ELMS.
 
