--- a/homework/HW4_MD_CityCrime.Rmd
+++ b/homework/HW4_MD_CityCrime.Rmd
@@ -9,6 +9,8 @@ In this assignment, we will be working with a dataset of total crimes reported b
 You will need to load the tidyverse library and the janitor library
 
 ```{r}
+library(tidyverse)
+library(janitor)
 ```
 
 Then you'll load the data from the web. The URL for the data is: https://raw.githubusercontent.com/dwillis/jour405/refs/heads/main/data/md_cities_crime_2019_2020.csv. You will create a dataframe called `md_cities` that contains the data from this URL.
@@ -16,19 +18,25 @@ Then you'll load the data from the web. The URL for the data is: https://raw.git
 ### Task 2: Load the Data
 
 ```{r}
+md_cities <- read_csv("https://raw.githubusercontent.com/dwillis/jour405/refs/heads/main/data/md_cities_crime_2019_2020.csv")
 ```
 ### Task 3: Calculating Rates
 
 Calculate violent and property crime rates for each city for both years using `mutate()`. You'll create four new columns: `violent_rate_2019`, `property_rate_2019`, `violent_rate_2020`, and `property_rate_2020`. You'll need to figure out the proper unit rate, given that there are varying populations. There's no perfect choice; choose the one that works best for you. Save the results to a new dataframe called `md_cities_rates`.
 
 ```{r}
+md_cities_rates <- md_cities |> mutate(
+  violent_rate_2019 = violent2019/pop2019 * 100000,
+  property_rate_2019 = property2019/pop2019 * 100000,
+  violent_rate_2020 = violent2020/pop2020 * 100000,
+  property_rate_2020 = property2020/pop2020 * 100000)
 ```
 
 ### Task 4: Describe the Rates
 
 Examine the new dataframe, `md_cities_rates`, by clicking on it in the Environment tab in RStudio and sorting by the rate columns. Write a couple of sentences about the results, comparing and contrasting the cities with the highest rates (both violent and property) in 2019 and 2020. Do you see any patterns? What does this tell you about crime in Maryland cities? What's the story here?
 
-ANSWER HERE
+After sorting the crime rates, Baltimore had the highest violent crime in 2019 and 2020, though it did decline slightly in the latter. However, smaller cities like Ocean City, Cambridge and Princess Anee also show very high violent and especially property crime rates, suggesting that crime is concentrated in certain places and that small populations can produce unusually high per-capita rates.
 
 
 ### Task 5: Calculate Percentage Change
@@ -36,19 +44,26 @@ ANSWER HERE
 Let's add two percentage change columns to your dataframe: one for violent crime rates and one for property crime rates. You'll calculate the percentage change between 2019 and 2020 for each city. Save the results to a new dataframe called `md_cities_change`.
 
 ```{r}
+md_cities_change <- md_cities_rates |> mutate(
+  violent_rate_pct_change = ((violent_rate_2020 - violent_rate_2019) / violent_rate_2019) * 100,
+  property_rate_pct_change = ((property_rate_2020 - property_rate_2019) / property_rate_2019 * 100))
 ```
 
 ### Task 7: Describe Percentage Changes
 
 Look at the `md_cities_change` dataframe by clicking on it in the Environment tab in RStudio. Write a couple of sentences describing the percentage change results. What's more interesting here, the patterns or the outliers? What's the story in the data?
 
-ANSWER HERE
+In Maryland larger cities generally saw a small decline i violent and property crime from 2019 to 2020, with Baltimore showing decreases of about 13% and 26%. In the smaller towns, however, we see extreme percent changes because low populations make rates highly sensitive to a difference being made by just a few crimes. This makes the outliers more noticable than the overall patterns.
 
 ### Task 8: Tell the Best Story
 
 Write up a lede and nutgraf of a story with the _best_ story idea you've found in this assignment. The lede should be a single sentence that summarizes the most important information in the data. The nutgraf should be a paragraph that provides more context and explains why the data is important.
 
-ANSWER HERE
+(context: I've wrote this as if the figures are new data)
+
+New figures show a dip crime for Maryland's biggest cities, but smaller jurisdictions see shocking swings-- here's why the numbers could mislead the public about local safety.
+
+New data shows Baltimore and Annapolis report drops in both violent and property time, yet smaller areas like Brookeville, Cambridge and Princess Anne experienced extreme percentage jumps or drops-- sometimes skyrocketing hundreds of percent or falling to zero-- simply due to their small populations. The public should be cautious that while the numbers grab attention, absolute crime totals tell the real story, revealing that most serious crimes remain concentrated in larger urban areas. 
 
 ### Task 9: Save Your Work and Put it on GitHub
 
