--- a/homework/HW4_MD_CityCrime.Rmd
+++ b/homework/HW4_MD_CityCrime.Rmd
@@ -68,3 +68,32 @@ New data shows Baltimore and Annapolis report drops in both violent and property
 ### Task 9: Save Your Work and Put it on GitHub
 
 Save this notebook, then commit it to your local repository. Push the changes to your GitHub repository and submit the URL for this file in ELMS.
+
+### Task 10:
+Using the 2020 violent crime rate, calculate the percentiles using `ntile()`. Save the results to a new dataframe called `md_cities_percentiles`. How many cities are above the 90th percentile?
+Calculate the Interquartile Range of the 2020 violent crime rate using `summarize()` and R's `IQR()` function. The syntax is similar to how `mean()` works.
+Do the results change your best story idea from the previous assignment? Why or why not?
+```{r}
+library(tidyverse)
+library(janitor)
+```
+```{r}
+md_cities_percentiles <- md_cities_rates |>
+  mutate(
+    violent_2020_percentile = ntile(violent_rate_2020, 100)
+  )
+
+```
+
+```{r}
+md_cities_percentiles |>
+  filter(violent_2020_percentile > 90) |>
+  tally()
+
+```
+```{r}
+md_cities_rates |>
+  summarize(IQR_violent_2020 = IQR(violent_rate_2020, na.rm = TRUE))
+
+```
+The data confirms that a small group of cities account for the highest violent crime rates, while may towns report very low or even zero rates. The middle 50% of cities fall within a moderate range, with my 90th percentile calculation working out that only about 10 cities rank in the top 10% statewide. This supports my original angle for the lede that dramatic swings in sparser populations can distort perception, sine extreme rates are concentrated in a handful of places rather than spread statewide. 
